Forgot to push style change to courseCode to avoid too long upper border

--- a/app/static/css/classes.css
+++ b/app/static/css/classes.css
@@ -184,6 +184,7 @@
 
 .courseCode {
     font-size: 14px;
+    width: fit-content;
     border-top: 1px solid black;
 }
 
